--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "webrtc-nodejs-socketio",
   "version": "1.0.0",
   "description": "webRTC using nodejs-socketio",
-  "main": "index.js",
+  "main": "host.js",
   "scripts": {
+    "start": "nodemon host",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "VasanthThorazhiKumaran",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.1"
+    "simple-peer": "^9.9.3",
+    "socket.io": "^3.1.1",
+    "wrtc": "^0.4.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
